Demonstration videos added

--- a/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
+++ b/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
@@ -1701,6 +1701,24 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "###A.2.3 Example video"
+      ],
+      "metadata": {
+        "id": "cPVVgjyqnchL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* https://youtu.be/U9c6kWX0Qgw"
+      ],
+      "metadata": {
+        "id": "OnQO_56knf1q"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "q9qHLfQHmrws"
       },
@@ -2699,6 +2717,24 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Video Demonstrations"
+      ],
+      "metadata": {
+        "id": "2KDyQ4GvaAIq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* https://youtu.be/kvG7OrjBirI"
+      ],
+      "metadata": {
+        "id": "ffnKNQSyaDF6"
+      }
     },
     {
       "cell_type": "markdown",
