--- a/assignments/ME421_Assignement_Vibration_LAB.ipynb
+++ b/assignments/ME421_Assignement_Vibration_LAB.ipynb
@@ -26,7 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
-      "authorship_tag": "ABX9TyMWRYlfOhPr4tP4ypyIHHgU",
+      "authorship_tag": "ABX9TyPSg/IW/TsfHFc/Ip6AdnY1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,15 +62,151 @@
       "source": [
         "\n",
         "\n",
-        "1.   Answer the in the lab, [pre-requisite competency assessment quiz.](https://feelsnew.pdn.ac.lk/mod/quiz/view.php?id=7855)\n",
-        "2.   With detailed justification derive the governing equations for the small amplitude motion of the system assigned to your group. \n",
+        "1.   Answer the in the lab, [pre-requisite competency assessment quiz.](https://feelsnew.pdn.ac.lk/mod/quiz/view.php?id=7869)\n",
+        "2.   With detailed justification derive a finite dimensional approximation of the small amplitude motion of the system assigned to your group. The model should capture the first four modes of resonance of the system.\n",
         "3. Simulate and animate the small amplitude motion of the system and use the simulations to provide, with justification, a qualitative desrcription of the small amplitude motion of the system\n",
-        "4. Dvelop a Rashpberry Pi based data aquistion system and use that to measure the natural frequencies of the 2-DOF rotational plus translational system in the applied mechanics lab\n",
+        "4. Provide at least two soultions that will allow you to safely operate at frequencies near the second mode of resonance of the system.\n",
+        "4. Use a Rashpberry Pi based data aquistion system and use that to measure the natural frequencies of the 2-DOF rotational plus translational system in the applied mechanics lab using FFTs methods.\n",
         "5. All your work will be collected and reported in a .ipynb notebook that will be maintained in a Github repository allocated to your group. All equations and mathematical expressions should be typed in LaTeX and all comutations should be performed using Python and should be contained in the same .ipynb notebbok.\n",
         "\n"
       ],
       "metadata": {
         "id": "-B7sQ99164ym"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Q - Link chain vibration - Group LC"
+      ],
+      "metadata": {
+        "id": "CTAg97trbMRv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* https://youtu.be/v9cwO1zEdiY"
+      ],
+      "metadata": {
+        "id": "mmJNhALebRqy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Q - Whirling of a shaft - Group WS\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RgkgNY-ihBCc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* https://youtu.be/a1K85Lkk7SY"
+      ],
+      "metadata": {
+        "id": "RuBmj1dchFuu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "zK9gl14JGgX-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Q - Cantelever beam - Group CB"
+      ],
+      "metadata": {
+        "id": "gNujFx7siB-J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* https://youtu.be/6RgJex3EKwk"
+      ],
+      "metadata": {
+        "id": "PXuW6RveiHzl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Q - Axially Loaded Beam - Group AL"
+      ],
+      "metadata": {
+        "id": "bjJJ-zZnlpXh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* https://youtu.be/_JMAQ6-0W2Y\n",
+        "* https://youtu.be/N2qkkK62Owg"
+      ],
+      "metadata": {
+        "id": "5H-YaCOllvi1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Q - Flow Induced Resonance - Group FI"
+      ],
+      "metadata": {
+        "id": "GvD3JoJbpSNb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* https://youtu.be/d1noaSZgsLU"
+      ],
+      "metadata": {
+        "id": "my9QQmmTpV6M"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Q - Rotating shaft on a flexural structure - Group RF"
+      ],
+      "metadata": {
+        "id": "lpg1Db5nmSFS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* https://youtu.be/R2hO--TIjjA"
+      ],
+      "metadata": {
+        "id": "hK0Teg-GmaCZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Q - Two Story Building - Group TS"
+      ],
+      "metadata": {
+        "id": "jW4i-9tvTjc9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://www.youtube.com/watch?v=_0D_hMn12BA"
+      ],
+      "metadata": {
+        "id": "_zX8UwmhaXeC"
       }
     }
   ]
