--- a/assignments/ME421_Assignement_Vibration_LAB.ipynb
+++ b/assignments/ME421_Assignement_Vibration_LAB.ipynb
@@ -26,7 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
-      "authorship_tag": "ABX9TyPSg/IW/TsfHFc/Ip6AdnY1",
+      "authorship_tag": "ABX9TyN3zIp2QKo+eiwPrCkW/4P0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "\n",
         "\n",
         "1.   Answer the in the lab, [pre-requisite competency assessment quiz.](https://feelsnew.pdn.ac.lk/mod/quiz/view.php?id=7869)\n",
-        "2.   With detailed justification derive a finite dimensional approximation of the small amplitude motion of the system assigned to your group. The model should capture the first four modes of resonance of the system.\n",
+        "2.   With detailed justification derive a finite dimensional approximation of the small amplitude motion of the system shown in the video assigned to your group. The model should capture the first four modes of resonance of the system.\n",
         "3. Simulate and animate the small amplitude motion of the system and use the simulations to provide, with justification, a qualitative desrcription of the small amplitude motion of the system\n",
         "4. Provide at least two soultions that will allow you to safely operate at frequencies near the second mode of resonance of the system.\n",
         "4. Use a Rashpberry Pi based data aquistion system and use that to measure the natural frequencies of the 2-DOF rotational plus translational system in the applied mechanics lab using FFTs methods.\n",
@@ -113,13 +113,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "zK9gl14JGgX-"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "#Q - Cantelever beam - Group CB"
       ],
@@ -148,7 +141,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* https://youtu.be/_JMAQ6-0W2Y\n",
         "* https://youtu.be/N2qkkK62Owg"
       ],
       "metadata": {
@@ -203,7 +195,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://www.youtube.com/watch?v=_0D_hMn12BA"
+        "* https://www.youtube.com/watch?v=_0D_hMn12BA"
       ],
       "metadata": {
         "id": "_zX8UwmhaXeC"
