demonstration videos added

--- a/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
+++ b/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
@@ -1711,7 +1711,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* https://youtu.be/U9c6kWX0Qgw"
+        "* https://youtu.be/U9c6kWX0Qgw\n",
+        "* https://youtu.be/87SQH1rGIG8"
       ],
       "metadata": {
         "id": "OnQO_56knf1q"
@@ -2730,7 +2731,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* https://youtu.be/kvG7OrjBirI"
+        "* https://youtu.be/kvG7OrjBirI\n",
+        "* https://youtu.be/87SQH1rGIG8\n",
+        "* https://youtu.be/d1noaSZgsLU"
       ],
       "metadata": {
         "id": "ffnKNQSyaDF6"
@@ -3321,6 +3324,24 @@
       ],
       "metadata": {
         "id": "kayRgz7z1jGl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Example #4 Vibrating chain"
+      ],
+      "metadata": {
+        "id": "S8iMQ3Hgq7a0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*https://youtu.be/v9cwO1zEdiY"
+      ],
+      "metadata": {
+        "id": "EmayNzTLrAhY"
       }
     },
     {
