--- a/assignments/ME422_Assignement_Vibration_LAB.ipynb
+++ b/assignments/ME422_Assignement_Vibration_LAB.ipynb
@@ -26,7 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
-      "authorship_tag": "ABX9TyNXGzcKZW0fHVx5qDiVUz+W",
+      "authorship_tag": "ABX9TyP0rW6mTuluoPLJia2iOiU9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,8 +79,37 @@
         "id": "ubr1DHXZIR6M"
       },
       "source": [
-        "#Q - Coupled Rotor System - Group CRS"
+        "#Q - Coupled Rotor System: Group Kalman-CRS"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Members"
+      ],
+      "metadata": {
+        "id": "sc4L_6CUvo-2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/024\n",
+        "* E/17/156\n",
+        "* E/17/274"
+      ],
+      "metadata": {
+        "id": "2vxDu3I9v9rT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "U5Q8_WWAvrdW"
+      }
     },
     {
       "cell_type": "markdown",
@@ -95,10 +124,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Q - Two Story Lateral Vibrations -Group TSL"
+        "#Q - Two Story Lateral Vibrations: Group Kalman-TSL"
       ],
       "metadata": {
         "id": "1w3YekkRwYKf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Members"
+      ],
+      "metadata": {
+        "id": "ukuqMmdDvxlJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/004\n",
+        "* E/17/053\n",
+        "* E/17/227\n",
+        "* E/17/286"
+      ],
+      "metadata": {
+        "id": "OZyMniROwF5O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "8ALregcXv6Az"
       }
     },
     {
@@ -113,10 +172,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Q - 4-DOF Translational System - Group FTS"
+        "#Q - 4-DOF Translational System: Group Kalman-FTS"
       ],
       "metadata": {
         "id": "ThVRGUXkyCJd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Members"
+      ],
+      "metadata": {
+        "id": "2nzoz4fWvzoW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/008\n",
+        "* E/17/064\n",
+        "* E/17/203\n",
+        "* E/17/254"
+      ],
+      "metadata": {
+        "id": "1PSyhvLHwOdr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "u507KQ0Lv62i"
       }
     },
     {
@@ -131,10 +220,39 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Q - Coupled Torsional and Translational System - Group CTT"
+        "#Q - Coupled Torsional and Translational System: Group Kalman-CTT"
       ],
       "metadata": {
         "id": "q1bP_PZcy3qJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Members"
+      ],
+      "metadata": {
+        "id": "8z922VO7v05e"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/035\n",
+        "* E/17/259\n",
+        "* E/17/388"
+      ],
+      "metadata": {
+        "id": "8Taybw4gwdKS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "f-oFyxdTv7mT"
       }
     },
     {
