--- a/assignments/ME421_Assignement_Vibration_LAB.ipynb
+++ b/assignments/ME421_Assignement_Vibration_LAB.ipynb
@@ -26,7 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
-      "authorship_tag": "ABX9TyN3zIp2QKo+eiwPrCkW/4P0",
+      "authorship_tag": "ABX9TyMCeLg3mleVHYPw7FycRPLX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
         "1.   Answer the in the lab, [pre-requisite competency assessment quiz.](https://feelsnew.pdn.ac.lk/mod/quiz/view.php?id=7869)\n",
         "2.   With detailed justification derive a finite dimensional approximation of the small amplitude motion of the system shown in the video assigned to your group. The model should capture the first four modes of resonance of the system.\n",
         "3. Simulate and animate the small amplitude motion of the system and use the simulations to provide, with justification, a qualitative desrcription of the small amplitude motion of the system\n",
-        "4. Provide at least two soultions that will allow you to safely operate at frequencies near the second mode of resonance of the system.\n",
+        "4. Provide at least two soultions that will allow you to safely operate at frequencies near the second mode of resonance of the system. Justify your answer using simulations and compare the pros and cons of the two solutions.\n",
         "4. Use a Rashpberry Pi based data aquistion system and use that to measure the natural frequencies of the 2-DOF rotational plus translational system in the applied mechanics lab using FFTs methods.\n",
         "5. All your work will be collected and reported in a .ipynb notebook that will be maintained in a Github repository allocated to your group. All equations and mathematical expressions should be typed in LaTeX and all comutations should be performed using Python and should be contained in the same .ipynb notebbok.\n",
         "\n"
@@ -77,10 +77,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Q - Link chain vibration - Group LC"
+        "#Q - Link chain vibration: Group Rankine-LC"
       ],
       "metadata": {
         "id": "CTAg97trbMRv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Assignment "
+      ],
+      "metadata": {
+        "id": "eKobrprzx4ix"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/087\n",
+        "* E/17/198\n",
+        "* E/17/209\n",
+        "* E/17/282"
+      ],
+      "metadata": {
+        "id": "TXw5ybHUyxu5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "ZE7WkKKXx72c"
       }
     },
     {
@@ -95,11 +125,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Q - Whirling of a shaft - Group WS\n",
+        "#Q - Whirling of a shaft: Group Rankine-WS\n",
         "\n"
       ],
       "metadata": {
         "id": "RgkgNY-ihBCc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Assignment "
+      ],
+      "metadata": {
+        "id": "Ox6Y8wd3yFcv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/355\n",
+        "* E/17/359\n",
+        "* E/17/401"
+      ],
+      "metadata": {
+        "id": "2UJBEEfRyi7f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "dVTM7PlVyjv7"
       }
     },
     {
@@ -114,10 +173,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Q - Cantelever beam - Group CB"
+        "#Q - Cantelever beam: Group Rankine-CB"
       ],
       "metadata": {
         "id": "gNujFx7siB-J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Assignment "
+      ],
+      "metadata": {
+        "id": "HbgMnhADyGHd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/013\n",
+        "* E/17/037\n",
+        "* E/17/086\n",
+        "* E/17/320"
+      ],
+      "metadata": {
+        "id": "QRkcE1eXyWqG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "_A147BQGyYGj"
       }
     },
     {
@@ -132,10 +221,39 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Q - Axially Loaded Beam - Group AL"
+        "#Q - Axially Loaded Beam: Group Rankine-AL"
       ],
       "metadata": {
         "id": "bjJJ-zZnlpXh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Assignment "
+      ],
+      "metadata": {
+        "id": "FoW59MWkyGmR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/187\n",
+        "* E/17/232\n",
+        "* E/17/285"
+      ],
+      "metadata": {
+        "id": "abF63-MXzg0l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "j1bgLRIiyrGl"
       }
     },
     {
@@ -150,10 +268,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Q - Flow Induced Resonance - Group FI"
+        "#Q - Flow Induced Resonance: Group Rankine-FI"
       ],
       "metadata": {
         "id": "GvD3JoJbpSNb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Assignment "
+      ],
+      "metadata": {
+        "id": "9eFlwuS0yHI9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/019\n",
+        "* E/17/048\n",
+        "* E/17/108\n",
+        "* E/17/244"
+      ],
+      "metadata": {
+        "id": "VdZZ5PQ9zpJ6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "zDglbsnoyoc3"
       }
     },
     {
@@ -168,10 +316,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Q - Rotating shaft on a flexural structure - Group RF"
+        "#Q - Rotating shaft on a flexural structure: Group Rankine-RF"
       ],
       "metadata": {
         "id": "lpg1Db5nmSFS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Assignment "
+      ],
+      "metadata": {
+        "id": "73S7q2DByHyb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/031\n",
+        "* E/17/152\n",
+        "* E/17/169\n",
+        "* E/17/317"
+      ],
+      "metadata": {
+        "id": "_Ggal6NIz3bu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "IFQpCVN9ytzZ"
       }
     },
     {
@@ -186,10 +364,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Q - Two Story Building - Group TS"
+        "#Q - Two Story Building: Group Rankine-TS"
       ],
       "metadata": {
         "id": "jW4i-9tvTjc9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Group Assignment "
+      ],
+      "metadata": {
+        "id": "zfvSwDQVyIeB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* E/17/009\n",
+        "* E/17/032\n",
+        "* E/17/095\n",
+        "* E/17/136"
+      ],
+      "metadata": {
+        "id": "JG5lUAz30Cs0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Problem Description"
+      ],
+      "metadata": {
+        "id": "Kd_SiHmfyuok"
       }
     },
     {
