error in coupled torsional corrected

--- a/assignments/Assignment_on_Modal_Analysis_of_Vibratory_Systems.ipynb
+++ b/assignments/Assignment_on_Modal_Analysis_of_Vibratory_Systems.ipynb
@@ -9,7 +9,7 @@
         "3zqQab4A8NdG",
         "ot-c6f7-9oON"
       ],
-      "authorship_tag": "ABX9TyOcY1XLOWzOc51/0ce6fy87",
+      "authorship_tag": "ABX9TyPNfr2IDvN0zXtk8BhRkFx3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -196,7 +196,7 @@
       "source": [
         "Show that  \n",
         "\\begin{align}\n",
-        "\\omega_1^2=\\omega_n^2,\\:\\:\\:\\:\\:\\omega_2^2={2\\omega_n^2+\\omega_0^2}\n",
+        "\\omega_1^2=\\omega_0^2,\\:\\:\\:\\:\\:\\omega_2^2={2\\omega_n^2+\\omega_0^2}\n",
         "\\end{align}\n",
         "are the eigenvalues of $\\Omega$ and \n",
         "\\begin{align}\n",
