--- a/answers-to-selected-assignments/Answers_Assignment_on_Modal_Analysis_of_Vibratory_Systems.ipynb
+++ b/answers-to-selected-assignments/Answers_Assignment_on_Modal_Analysis_of_Vibratory_Systems.ipynb
@@ -9,7 +9,7 @@
         "3zqQab4A8NdG",
         "ot-c6f7-9oON"
       ],
-      "authorship_tag": "ABX9TyOcY1XLOWzOc51/0ce6fy87",
+      "authorship_tag": "ABX9TyMHklBk+ylRxddYnRuEs6KU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,9 +60,12 @@
         "import numpy as np\n",
         "import scipy as sp\n",
         "from scipy.integrate import odeint\n",
-        "import plotly.graph_objects as go"
+        "import plotly.graph_objects as go\n",
+        "from sympy import *\n",
+        "from sympy import init_printing\n",
+        "init_printing()  "
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -181,6 +184,54 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "###Sample answer"
+      ],
+      "metadata": {
+        "id": "3cF97DXy-gNe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Neglecting the mass of the rods and assuming that damping is negligibly small and writing Newton's equations for each mass we have\n",
+        "\n",
+        "\\begin{align}\n",
+        "ml^2\\ddot{\\theta}_1&=-mgl\\sin{\\theta}_1-k(\\theta_1-\\theta_2)\\\\\n",
+        "ml^2\\ddot{\\theta}_2&=-mgl\\sin{\\theta}_2-k(\\theta_2-\\theta_1)\n",
+        "\\end{align}\n",
+        "where $k$ is the torsional spring constant of the flexible coupling, $l$ is the length of the rod, and $m$ is the mass of the pendulum.\n",
+        "\n",
+        "For small amplitude motion we have that $\\theta_1,\\theta_2$ are very small and hence that\n",
+        "\\begin{align}\n",
+        "ml^2\\ddot{\\theta}_1+(mgl+k)\\theta_1-k\\theta_2&=0\\\\\n",
+        "ml^2\\ddot{\\theta}_2+(mgl+k)\\theta_2-k\\theta_1&=0\\\\\n",
+        "\\end{align}\n"
+      ],
+      "metadata": {
+        "id": "Tovn3K0V-ks-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This can be written as\n",
+        "\\begin{align}\n",
+        "\\ddot{\\theta}+\\Omega\\theta=0,\n",
+        "\\end{align}\n",
+        "where \n",
+        "\\begin{align}\n",
+        "\\theta=\\begin{bmatrix}\\theta_1 \\\\ \\theta_2\\end{bmatrix},\\:\\:\\:\\:\\:\\:\n",
+        "\\Omega=\\begin{bmatrix}\\omega_n^2+\\omega_0^2 & -\\omega_n^2\\\\ -\\omega_n^2 & \\omega_n^2+\\omega_0^2\\end{bmatrix},\n",
+        "\\end{align}\n",
+        " $\\omega_0^2=\\frac{g}{l}$, $\\omega_n^2=\\frac{k}{ml^2}$."
+      ],
+      "metadata": {
+        "id": "iiFknm8kAiKB"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "BChlPHgcIzwk"
       },
@@ -196,13 +247,134 @@
       "source": [
         "Show that  \n",
         "\\begin{align}\n",
-        "\\omega_1^2=\\omega_n^2,\\:\\:\\:\\:\\:\\omega_2^2={2\\omega_n^2+\\omega_0^2}\n",
+        "\\omega_1^2=\\omega_0^2,\\:\\:\\:\\:\\:\\omega_2^2={2\\omega_n^2+\\omega_0^2}\n",
         "\\end{align}\n",
         "are the eigenvalues of $\\Omega$ and \n",
         "\\begin{align}\n",
         "\\bar{\\theta}_1=\\begin{bmatrix}1 \\\\1\\end{bmatrix},\\:\\:\\:\\:\\:\\bar{\\theta}_2=\\begin{bmatrix}1 \\\\-1\\end{bmatrix}\n",
         "\\end{align}\n",
         "are the corresponding eigenvectors of $\\Omega$."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Sample answer"
+      ],
+      "metadata": {
+        "id": "tq56fIGbBFOE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "omega_n, omega_0=symbols('omega_n, omega_0',real=True)"
+      ],
+      "metadata": {
+        "id": "pQMD5rwZBHqo"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Omega=Matrix([[omega_n**2+omega_0**2, -omega_n**2],[-omega_n**2, omega_n**2+omega_0**2]])"
+      ],
+      "metadata": {
+        "id": "8P2qMeZnCQaF"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Omega"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        },
+        "id": "lDq2cTbOCtXb",
+        "outputId": "e2a4b501-a082-44d2-9ffb-430b71186a0a"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[omega_0**2 + omega_n**2,             -omega_n**2],\n",
+              "[            -omega_n**2, omega_0**2 + omega_n**2]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}\\omega_{0}^{2} + \\omega_{n}^{2} & - \\omega_{n}^{2}\\\\- \\omega_{n}^{2} & \\omega_{0}^{2} + \\omega_{n}^{2}\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Omega.eigenvals()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "WMtr_QoXCyY0",
+        "outputId": "301b7a26-cc4e-4096-fa1b-d416d4586340"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "⎧  2       2       2   ⎫\n",
+              "⎨ω₀ : 1, ω₀  + 2⋅ωₙ : 1⎬\n",
+              "⎩                      ⎭"
+            ],
+            "text/latex": "$\\displaystyle \\left\\{ \\omega_{0}^{2} : 1, \\  \\omega_{0}^{2} + 2 \\omega_{n}^{2} : 1\\right\\}$"
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Omega.eigenvects()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        },
+        "id": "q5y2KJjcD3pb",
+        "outputId": "ccd985d4-1cbe-49a3-c05d-b5893e4e9f90"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "⎡⎛  2     ⎡⎡1⎤⎤⎞  ⎛  2       2     ⎡⎡-1⎤⎤⎞⎤\n",
+              "⎢⎜ω₀ , 1, ⎢⎢ ⎥⎥⎟, ⎜ω₀  + 2⋅ωₙ , 1, ⎢⎢  ⎥⎥⎟⎥\n",
+              "⎣⎝        ⎣⎣1⎦⎦⎠  ⎝                ⎣⎣1 ⎦⎦⎠⎦"
+            ],
+            "text/latex": "$\\displaystyle \\left[ \\left( \\omega_{0}^{2}, \\  1, \\  \\left[ \\left[\\begin{matrix}1\\\\1\\end{matrix}\\right]\\right]\\right), \\  \\left( \\omega_{0}^{2} + 2 \\omega_{n}^{2}, \\  1, \\  \\left[ \\left[\\begin{matrix}-1\\\\1\\end{matrix}\\right]\\right]\\right)\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
       ]
     },
     {
