--- a/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
+++ b/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
@@ -953,7 +953,7 @@
         "\\end{bmatrix}.\n",
         "\\end{align}\n",
         "\n",
-        "Thus if we define $Y\\triangleq Tz$ where $z=[z_1\\:\\:\\:z_2]^T$,\n",
+        "Thus if we define $X\\triangleq Tz$ where $z=[z_1\\:\\:\\:z_2]^T$,\n",
         "then the equations above reduce to the form $\\ddot{z}+T^{-1}\\Omega Tz=\\ddot{z}+Dz=T^{-1}M^{-1}F$.  Then these equations take the explicit form\n",
         "\\begin{align*}\n",
         "\\ddot{z}_1+\\omega_1^2z_1&=\\frac{\\gamma_1}{m_1}\\,f(t),\\\\\n",
