--- a/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
+++ b/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
@@ -97,7 +97,7 @@
         "import plotly.graph_objects as go\n",
         "from sympy import *"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
         "        #fig.show()\n",
         "        return fig"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
       "source": [
         "mv=mugas_vibration_functions()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -3660,8 +3660,8 @@
         "\\begin{align}\n",
         "F(k)&=\\frac{1}{a}\\int_{0}^{a} e^{-i2\\pi k x}\\:dx\\\\\n",
         "&=\\left. \\frac{e^{-i2\\pi k x}}{-i2\\pi ka}\\right|_{0}^{a}=\n",
-        "\\frac{i}{\\pi k a}\\left(\\frac{e^{-2i\\pi k a}-1}{2}\\right)\n",
-        "=\\frac{\\sin\\left(\\pi k a\\right)}{2\\pi k a}-i\\frac{\\sin^2\\left(\\pi k a\\right)}{\\pi k a}\n",
+        "\\frac{i}{\\pi k a}\\left(\\frac{e^{-2i\\pi k a}-1}{2}\\right)\\\\\n",
+        "&=\\frac{\\sin\\left(\\pi k a\\right)}{\\pi k a}e^{-i\\pi k a}\n",
         "\\end{align}"
       ],
       "metadata": {
