--- a/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
+++ b/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
@@ -97,7 +97,7 @@
         "import plotly.graph_objects as go\n",
         "from sympy import *"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
         "        #fig.show()\n",
         "        return fig"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
       "source": [
         "mv=mugas_vibration_functions()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2896,6 +2896,33 @@
       ],
       "metadata": {
         "id": "8tJF0SCmcMo_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Example #4 - Vibration of a spherical shell"
+      ],
+      "metadata": {
+        "id": "uQYomDxWSWy6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\\begin{align*}\n",
+        "\\frac{\\partial^2 u}{\\partial t^2} + H u = q(t,r,\\theta,\\phi)\n",
+        "\\end{align*}\n",
+        "\n",
+        "Here\n",
+        "\n",
+        "\\begin{align*}\n",
+        "H  = -c^2\\left(\\frac{1}{r^2} \\frac{\\partial}{\\partial r} \\left( r^2 \\frac{\\partial }{\\partial r} \\right) + \\frac{1}{r^2 \\sin\\theta} \\frac{\\partial}{\\partial \\theta} \\left( \\sin\\theta \\frac{\\partial }{\\partial \\theta} \\right) + \\frac{1}{r^2 \\sin^2\\theta} \\frac{\\partial^2 }{\\partial \\phi^2}\\right)\n",
+        "\\end{align*}\n",
+        "is a linear operator on $\\mathfrak{F}$. Here $\\mathfrak{F}$  denote the infinite-dimensional vector space of twice continuously differentiable functions defined on the interior of a sphere of radius $r_0$, such that the functions and their second-order partial derivatives vanish on the boundary."
+      ],
+      "metadata": {
+        "id": "vM6VgKvXShaZ"
       }
     },
     {
