--- a/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
+++ b/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
@@ -3828,6 +3828,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Note that** When one uses the Fourier transform pair\n",
+        "\n",
+        "\\begin{align}f(x)&=\\frac{1}{2\\pi}\\int_{-\\infty}^{\\infty} F(\\omega)\\,e^{i\\omega x}\\, d\\omega\\\\ F(\\omega)&=\\int_0^\\infty f(x)e^{-i\\omega x}\\:dx\\end{align}\n",
+        "\n",
+        "then the above Parceval's theorem becomes:\n",
+        "\\begin{align}\n",
+        "\\int_0^\\infty |f(x)|^2\\, dx = \\frac{1}{2\\pi} \\int_{-\\infty}^{\\infty} |F(\\omega)|^2\\, d\\omega\n",
+        "\\end{align}"
+      ],
+      "metadata": {
+        "id": "Y8bG-IhUOnvf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Nyquist-Shannon sampling Theorem"
       ],
       "metadata": {
