--- a/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
+++ b/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
@@ -3856,7 +3856,7 @@
         "Let us consider the reconstruction of a band limited signal $x(t)$ from its samples $\\{x(nT_s)\\}$ where the sampling frequncy of the signal is $f_s=\\frac{1}{T_s}$.\n",
         "\n",
         "A signal $x(t)$ is bandlimited if its Fourier Transform\n",
-        "$ X(f)\\ \\triangleq  \\int _{-\\infty }^{\\infty }x(t)\\ e^{-i2\\pi ft}\\ {\\rm {d}}t$ takes the form shown in the figure below (from [Wikipedia](https://en.wikipedia.org/wiki/Nyquist%E2%80%93Shannon_sampling_theorem#/media/File:Bandlimited.svg)) where the maximum frequency is $f_{max}=B$."
+        "$ X(f)\\ \\triangleq  \\int _{-\\infty }^{\\infty }x(t)\\ e^{-i2\\pi ft}\\ {\\rm {d}}t$ takes a band limited form similar to the the one shown in the figure below (from [Wikipedia](https://en.wikipedia.org/wiki/Nyquist%E2%80%93Shannon_sampling_theorem#/media/File:Bandlimited.svg)) where the maximum frequency is $f_{max}=B$."
       ],
       "metadata": {
         "id": "wSjCYhY3sDKq"
