--- a/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
+++ b/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
@@ -4101,6 +4101,73 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Filtering"
+      ],
+      "metadata": {
+        "id": "Jw8i0CqGSHRm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note that the convolution of two functions $f,g\\in L^2(\\mathbb{R})$ is defined by\n",
+        "\n",
+        "\\begin{align}\n",
+        "(f * g) (t)= \\int_{-\\infty}^\\infty f(\\tau)\\, g(t - \\tau)\\, d\\tau.\n",
+        "\\end{align}\n",
+        "It easily follws that $(f * g) (t)= (g * f) (t)$\n"
+      ],
+      "metadata": {
+        "id": "boFhcXiXTvsN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Using the asymmetric Fourier transform pair (conventionally used in control theory and signal processing)\n",
+        "\n",
+        "\\begin{align}f(t)&=\\frac{1}{2\\pi}\\int_{-\\infty}^{\\infty} F(\\omega)\\,e^{i\\omega t}\\, d\\omega\\end{align}\n",
+        "\n",
+        "\\begin{align} F(\\omega)&=\\int_0^\\infty f(t)e^{-i\\omega t}\\:dt\\end{align}\n",
+        "\n",
+        "\n",
+        "We now compute the Fourier transform of $(f * g)(t)$\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\mathfrak{F}\\{f * g\\} = \\int_0^\\infty \\left( \\int_0^x f(\\tau)\\, g(t - \\tau)\\, d\\tau \\right) e^{-i\\omega t}\\, dt\n",
+        "\\end{align}\n",
+        "\n",
+        "Interchange the order of integration (Fubini’s theorem, assuming integrability):\n",
+        "\n",
+        "\\begin{align}\n",
+        "= \\int_0^\\infty f(\\tau) \\left( \\int_\\tau^\\infty g(t - \\tau)\\, e^{-i\\omega t}\\, dt \\right) d\\tau\n",
+        "\\end{align}\n",
+        "\n",
+        "Change variable in the inner integral: let $u = t - \\tau \\Rightarrow t = u + \\tau,\\; dt = du $\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\mathfrak{F}\\{f * g\\}&= \\int_0^\\infty f(\\tau) \\left( \\int_0^\\infty g(u)\\, e^{-i\\omega (u + \\tau)}\\, du \\right) d\\tau\\\\\n",
+        "&= \\int_0^\\infty f(\\tau)\\, e^{-i\\omega \\tau} \\left( \\int_0^\\infty g(u)\\, e^{-i\\omega u}\\, du \\right) d\\tau\\\\\n",
+        "&= \\left( \\int_0^\\infty f(\\tau)\\, e^{-i\\omega \\tau}\\, d\\tau \\right) \\cdot \\left( \\int_0^\\infty g(u)\\, e^{-i\\omega u}\\, du \\right)\\\\\n",
+        "&= F(\\omega)\\cdot G(\\omega) = \\mathfrak{F}\\{f\\}\\cdot\\mathfrak{F}\\{ g\\}\n",
+        "\\end{align}"
+      ],
+      "metadata": {
+        "id": "MDDtRKgCVjFF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FtejlOB4TvPy"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
